--- a/Pubs/Pubs.Domain/Pubs.Domain.csproj
+++ b/Pubs/Pubs.Domain/Pubs.Domain.csproj
@@ -5,4 +5,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
