--- a/Pubs/Pubs,Infrastructure/Pubs.Infrastructure.csproj
+++ b/Pubs/Pubs,Infrastructure/Pubs.Infrastructure.csproj
@@ -7,12 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Context\" />
-    <Folder Include="Core\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Models\" />
     <Folder Include="Exceptions\" />
-    <Folder Include="Repositories\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.32" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.32" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Pubs.Domain\Pubs.Domain.csproj" />
   </ItemGroup>
 
 </Project>
